# ot-nxp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
boards/rdrw612bga/: CMakeLists.txt  hardware_init.c  pin_mux.c
boards/rdrw612bga/freertos/: FreeRTOSConfig.h
boards/rt1060/: CMakeLists.txt  hardware_init.c  peripherals.c  peripherals.h  pin_mux.c  sdmmc_config.c  wifi_bt_config.c
boards/rt1170/: CMakeLists.txt  hardware_init.c  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h  sdmmc_config.c  sdmmc_config.h  wifi_bt_config.c
cmake/platform/: rt1060.cmake  rt1170.cmake  rw612.cmake
examples/: CMakeLists.txt
examples/br/: CMakeLists.txt  README-OTBR.md  app_ot.h  br_ot_freertos.c
examples/cli/: CMakeLists.txt  app_freertos_hooks.c
examples/cli/addons/: CMakeLists.txt  README.md  addons_cli.c
examples/cli/addons/debug/: CMakeLists.txt
examples/cli/addons/iperf/: CMakeLists.txt  iperf_cli.c
examples/cli/addons/lowpower/: CMakeLists.txt
examples/cli/addons/lwip/: lwip_cli.c
examples/cli/addons/platform/: CMakeLists.txt  radio_cli.c  radio_cli.h
examples/cli/addons/wifi/: wifi_cli.c
examples/hybrid/: CMakeLists.txt
examples/hybrid/ot_cli_ftd_zb_ed_rx_off/k32w061/: CMakeLists.txt  app_preinclude.h
examples/hybrid/ot_cli_ftd_zc/k32w1/: CMakeLists.txt  app_preinclude.h  main.c
examples/hybrid/ot_rcp_uart_dma_zb_coprocessor/k32w1/: CMakeLists.txt  app_preinclude.h  main.c
examples/hybrid/ot_rcp_uart_fc_ble_hci_bb_zb_ed_rx_off/k32w061/: CMakeLists.txt
examples/hybrid/ot_rcp_uart_fc_zb_ed_rx_off/k32w061/: CMakeLists.txt
script/: build-k32w1.bat  build-rw612.bat  build_k32w061  build_k32w1  build_rt1060  build_rt1170  build_rw612
src/common/: flash_ks.c  flash_littlefs.c  flash_nvm.c  ram_storage.h  uart.c
src/common/br/: border_agent.c  border_agent.h  br_rtos_manager.c  br_rtos_manager.h  infra_if.c  infra_if.h  lwip_hooks.c  lwip_hooks.h  lwip_mcast.c  lwip_mcast.h  udp_plat.c
src/common/lwip/: lwipopts.h  ot_lwip.c  ot_lwip.h  token_bucket.c
src/common/spinel/: misc.c  radio.cpp  spi_interface.cpp  system.c
src/imx_rt/rt1060/: CMakeLists.txt  README.md  openthread-core-rt1060-config.h
src/imx_rt/rt1170/: CMakeLists.txt  README.md  RT1170_cm7.ld  openthread-core-rt1170-config.h
src/k32w0/: CMakeLists.txt
src/k32w0/jn5189/: openthread-core-jn5189-config.h
src/k32w0/k32w061/: openthread-core-k32w061-config.h
src/k32w0/platform/: flash_pdm.c  pdm_ram_storage_glue.c  pdm_ram_storage_glue.h  radio.c  system.c
src/k32w1/k32w1/: K32W1480_connectivity.ld  entropy.c  k32w1.cmake  radio.c
src/rw/rw612/: CMakeLists.txt  README.md  openthread-core-rw612-config.h
src/rw/rw612/platform/: reset.c
